# TD_POO_final-racha_meziane

./: CMakeLists.txt  Equation.cpp  Equation.h  IMesh.h  Problem.cpp  Problem.h  Timer.cpp  Timer.h  UniformMesh.cpp  UniformMesh.h  Variable.h  main.cpp
test/: test_equation.cpp  test_problem.cpp  test_uniform_mesh.cpp
